--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
   transition: 200ms;
 }
 
-/* .nav_items h3 {
+.nav_items h3 {
   color: #021718;
   font-size: 1.5vw;
   font-family: "Poppins", sans-serif;
@@ -54,6 +54,7 @@ body {
   letter-spacing: 0.1em;
   margin-right: 1em;
   transition: 200ms;
+  justify-content: center;
 }
 
 .nav_items h3:active {
@@ -64,7 +65,17 @@ body {
   margin-top: -5px;
 
   transition: 400ms;
-} */
+}
+
+.nav-link {
+  display: flex;
+  justify-content: center;
+}
+
+.active-scroll-spy {
+  text-decoration: underline;
+
+}
 
 /* Main Page */
 
@@ -160,9 +171,7 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-
   grid-template-areas: "c";
-
   width: 100vw;
   height: 100vh;
 }
@@ -210,6 +219,77 @@ body {
   background-color: red;
 }
 
-.active-scroll-spy {
-  background-color: rgb(185, 114, 21);
+
+
+/* Portfolio */
+
+.portfolio-page-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 5fr;
+
+  grid-template-areas: 
+  "e"
+  "f"
+  ;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+/* .main-page-side-column-left {
+  grid-area: "c";
+  background: url("./components/img/repeated-square-dark.png");
+} */
+
+.portfolio_class h1 {
+  font-size: 5vw;
+  line-height: 1em;
+  color: #021718;
+  font-family: "Open Sans", sans-serif;
+  transition: 500ms;
+  font-weight: 400;
+  margin-top: 4vh;
+}
+
+.portfolio_title {
+  grid-area: "e";
+  display: flex;
+  justify-content: center;
+  
+  background-color: rgb(247, 247, 247);
+  padding-bottom: 10vh;
+}
+
+.portfolio_carousel_container {
+  grid-area: 'f';
+  display: flex;
+  justify-content: center;
+}
+
+.carousel.slide {
+
+
+}
+
+
+
+.portfolio_items h1 {
+}
+
+.portfolio_items h3 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  transition: 500ms;
+}
+
+.portfolio_items h1:hover {
+  letter-spacing: 0.05em;
+  transition: 500ms;
+}
+
+.carousel_image {
+  max-width: 25vw;
+  max-height: 50vh;
+  
 }
