--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Outfit:wght@300;400&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"');
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
 * {
   margin: 0;
 }
@@ -41,7 +41,8 @@ body {
 .nav_items h3 {
   color: #141414;
   font-size: 1.5vw;
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
+  font-weight: 500;
   text-decoration: none;
   letter-spacing: 0.1em;
   margin-right: 1em;
@@ -92,7 +93,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  
+
   padding-bottom: 10vh;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
@@ -123,15 +124,12 @@ body {
   font-family: "Open Sans", sans-serif;
   transition: 500ms;
   margin-left: 3vw;
-
 }
 
 .title-items h1:hover {
   letter-spacing: 0.05em;
   transition: 500ms;
 }
-
-
 
 .main_class h2 {
   font-size: 3vw;
@@ -143,7 +141,6 @@ body {
   font-weight: 400;
   transition: 500ms;
   margin-left: 3vw;
-  
 }
 
 .main_class_animate h2 {
@@ -235,8 +232,6 @@ body {
 
 /* Portfolio */
 
-
-
 .portfolio-page-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -247,12 +242,11 @@ body {
     "f";
 
   width: 100vw;
- padding-top: 50px;
- background-color: #ffffff;
- background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
- background-attachment: fixed;
- background-size: cover;
-  
+  padding-top: 50px;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%23ffffff' stroke-width='0.5' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23fafafa' href='%23s'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D21A1'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .portfolio_class h1 {
@@ -278,10 +272,6 @@ body {
   margin-top: 4vh;
 }
 
-
-
-
-
 /* Portfolio Boxes */
 
 .portfolio_wrap {
@@ -290,7 +280,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  grid-area: "f";
+  
   padding-top: 10vh;
   padding-bottom: 10vh;
   border-radius: 20px;
@@ -304,30 +294,28 @@ body {
 
 .box {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   flex-basis: 40vw;
   float: left;
   margin: 25px 15px;
-  border-radius: 3vw;
-  background-size: cover;
-  background-repeat: no-repeat;
+  border-radius: 1vw;
+  background-color: rgba(238, 240, 242, 0.7);
+  
   transition: 500ms !important;
   padding: 1vw;
 }
 
-.box:hover {
-  
-  
+/* .box:hover {
   background-color: rgb(24, 43, 74, 0.7);
   letter-spacing: 0.1em;
   transition: 500ms !important;
-}
+} */
 
-.box:active[wobble='1'] {
+.box:active[wobble="1"] {
   animation: myAnim 2s cubic-bezier(0.32, 0, 0.67, 0) 0s 1 normal forwards;
 }
-
 
 @keyframes myAnim {
   0% {
@@ -357,57 +345,50 @@ body {
   }
 }
 
-.box_image_container img {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 20vw;
-  max-height: 20vh;
-}
 
-.box_text_box {
+.box_title_text_box {
+  
+  display: flex;
+  align-content: center;
   margin-right: 2vw;
 }
 
+.box_image_container img {
+  
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 30vw;
+  max-height: 30vh;
+  margin:10px;
+}
+
 .box h2 {
-  font-family: "Didact Gothic", sans-serif;
-  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
   text-align: center;
-  color: #fff;
+  color: #141414;
   font-size: 2rem;
+  letter-spacing: 0.1rem;
 }
 .box h3 {
   font-family: "Didact Gothic", sans-serif;
   font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.1rem;
+  color: #141414;
+}
+
+.box h4 {
+  font-family: "Didact Gothic", sans-serif;
+  font-size: 1rem;
   font-weight: normal;
   text-align: center;
-
-  color: #fff;
+  letter-spacing: 0.1rem;
+  color: #141414;
 }
 
-.box1 {
-  background-color: rgba(24, 43, 74, 0.8);
-}
-.box2 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box3 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box4 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box5 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box6 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box7 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
-.box8 {
-  background-color: rgb(24, 43, 74, 0.8);
-}
+/* 141414 */
 .shadow1,
 .shadow2,
 .shadow3,
@@ -426,141 +407,9 @@ body {
 .shadow6,
 .shadow7,
 .shadow8 {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1), 0 0 20px rgba(0, 0, 0, 0.3) inset;
 }
 
-/****************************************************************
-*styling shadows
-****************************************************************/
-/* .shadow1:before,
-.shadow1:after {
-  position: absolute;
-  content: "";
-  bottom: 12px;
-  left: 15px;
-  top: 80%;
-  width: 45%;
-  background: #68749b;
-  z-index: -1;
-  -webkit-box-shadow: 0 20px 15px #68749b;
-  -moz-box-shadow: 0 20px 15px #68749b;
-  box-shadow: 0 20px 15px #68749b;
-  -webkit-transform: rotate(-6deg);
-  -moz-transform: rotate(-6deg);
-  transform: rotate(-6deg);
-}
-.shadow1:after {
-  -webkit-transform: rotate(6deg);
-  -moz-transform: rotate(6deg);
-  transform: rotate(6deg);
-  right: 15px;
-  left: auto;
-}
-.shadow2:before {
-  position: absolute;
-  content: "";
-  width: 80%;
-  top: 140px;
-  bottom: 15px;
-  left: 30px;
-  background-color: #9f8641;
-  z-index: -1;
-  -webkit-box-shadow: 0 23px 17px 0 #9f8641;
-  -moz-box-shadow: 0 23px 17px 0 #9f8641;
-  box-shadow: 0 23px 17px 0 #416a9f;
-  -webkit-transform: rotate(-4deg);
-  -moz-transform: rotate(-4deg);
-  transform: rotate(-4deg);
-}
-.shadow3:before,
-.shadow3:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  top: 2px;
-  left: 15px;
-  right: 15px;
-  z-index: -1;
-  border-radius: 100px/30px;
-  -webkit-box-shadow: 0 0 30px 2px #7a6b29;
-  -moz-box-shadow: 0 0 30px 2px #7a6b29;
-  box-shadow: 0 0 20px 2px #7a6b29;
-}
-.shadow4:before,
-.shadow4:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  bottom: 14px;
-  left: 0;
-  right: 0;
-  box-shadow: 0 0 20px 2px #051612;
-  border-radius: 100px/10px;
-  z-index: -1;
-}
-.shadow5:before,
-.shadow5:after {
-  position: absolute;
-  content: "";
-  box-shadow: 0 10px 25px 20px #68749b;
-  top: 40px;
-  left: 10px;
-  bottom: 50px;
-  width: 15%;
-  z-index: -1;
-  -webkit-transform: rotate(-8deg);
-  -moz-transform: rotate(-8deg);
-  transform: rotate(-8deg);
-}
-.shadow5:after {
-  -webkit-transform: rotate(8deg);
-  -moz-transform: rotate(8deg);
-  transform: rotate(8deg);
-  right: 10px;
-  left: auto;
-}
-.shadow6:before,
-.shadow6:after {
-  position: absolute;
-  content: "";
-  top: 100px;
-  bottom: 5px;
-  left: 30px;
-  right: 30px;
-  z-index: -1;
-  box-shadow: 0 0 40px 13px #486685;
-  border-radius: 100px/20px;
-}
-.shadow7:before,
-.shadow7:after {
-  position: absolute;
-  content: "1";
-  top: 25px;
-  left: 20px;
-  bottom: 150px;
-  width: 80%;
-  z-index: -1;
-  -webkit-transform: rotate(-6deg);
-  -moz-transform: rotate(-6deg);
-  transform: rotate(-6deg);
-}
-.shadow7:before {
-  box-shadow: 10px -10px 30px 15px #7a6b29;
-}
-.shadow7:after {
-  -webkit-transform: rotate(7deg);
-  -moz-transform: rotate(7deg);
-  transform: rotate(7deg);
-  bottom: 25px;
-  top: auto;
-  box-shadow: 10px 10px 30px 15px #7a6b29;
-}
-.shadow8 {
-  box-shadow: -6px -6px 8px -4px rgba(250, 254, 118, 0.75),
-    6px -6px 8px -4px rgba(254, 159, 50, 0.75),
-    6px 6px 8px -4px rgba(255, 255, 0, 0.75),
-    6px 6px 8px -4px rgba(0, 0, 255, 2.75);
-} */
 
 /* Contact */
 
